# HyPrism

./: .gitignore  Bootstrapper.cs  CODE_OF_CONDUCT.md  HyPrism.csproj  Program.cs  QWEN.md  README.md  SECURITY.md  app.manifest  main.go  readthedocs.yml
.electron/: custom_main.js
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-only.yml  build.yml  release.yml
Assets/Locales/: be-BY.json  de-DE.json  en-US.json  en.json  es-ES.json  fr-FR.json  ja-JP.json  ko-KR.json  pt-BR.json  ru-RU.json  ru.json  (+4 more)
Backend/: AppService.cs  Logger.cs
Frontend/: index.html  package-lock.json  package.json  postcss.config.js  tsconfig.json  vite.config.ts
Hosts/: ElectronRuntimeHost.cs  IRuntimeHost.cs  RuntimeHostFactory.cs  TauriRuntimeHost.cs
HyPrism.IpcGen/: Program.cs  TypeScriptEmitter.cs
Licenses/: COPYING.md  NPM-PACKAGES-LICENSES.md  NUGET-PACKAGES-LICENSES.md
Models/: Config.cs  InstalledInstance.cs  LatestInstanceInfo.cs  LaunchVersionChangedMessage.cs  MirrorMeta.cs  OfficialPatchModels.cs  VersionCache.cs
Properties/: electron-builder.json
Scripts/: generate-ipc.mjs  publish.sh  tauri-wrapper.sh  update-flathub-manifest.sh
TauriWrapper/: package-lock.json  package.json
TauriWrapper/src-tauri/: Cargo.toml  tauri.conf.json
TauriWrapper/src-tauri/capabilities/: default.json
TauriWrapper/src-tauri/src/: main.rs
UI/: App.axaml  App.axaml.cs
app/: app.go  config.go
flatpak/: dev.hyprism.HyPrism.json
scripts/: build-linux.sh
(+427 files in other folders)
