[package]
name = "hyprism_tauri_wrapper"
version = "0.1.0"
description = "HyPrism Tauri runtime wrapper"
authors = ["HyPrism Team"]
license = "GPL-3.0-only"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "hyprism_tauri_wrapper"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
